// Copyright (c) 2024 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.admin.participant.v1;

import "scalapb/scalapb.proto";

message ActiveContract {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.UnstableProtoVersion";

  int32 protocol_version = 1;
  string domain_id = 2;
  bytes contract = 3;
  int64 reassignment_counter = 4;
}
